[package]
name = "issue-cli-mockup"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle-hyperlink = "1"
anstyle-progress = "0.1"
clap = { version = "4", features = ["derive", "unicode", "unstable-v5"] }
color-eyre = "0.6"
dialoguer = "0.12"
minijinja = "2"
minijinja-contrib = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
supports-hyperlinks = "3"
thiserror = "2"
tracing = "0.1"
tracing-human-layer = "0.2"
tracing-indicatif = "0.3"
tracing-subscriber = "0.3"
